--- a/src/package.json
+++ b/src/package.json
@@ -1,14 +1,14 @@
 {
   "name": "ptyhon",
   "version": "1.0.0",
-  "description": " Simple work with data obtained from a web service ",
-  "main": "test.py",
+  "description": " Generate a SqlServer database, from a flat file ",
+  "main": "generate.py",
   "engineStrict": true,
   "engines": {
     "python": "latest"
   },
   "scripts": {
-    "start": "python test.py",
+    "start": "python generate.py",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Omar A. Elia",
