--- a/src/.env.example
+++ b/src/.env.example
@@ -1,6 +1,5 @@
 # Put your enviroment configuration here VARIABLE=value
-
-URL_DATA=http://www.mocky.io/v2/5eae014f2f000058001988d6
+RL_DATA=http://192.168.52.15/LeyesReparatorias
 
 
 EXTERNAL_PORT=8083
