--- a/src/.env.example
+++ b/src/.env.example
@@ -1,6 +1,11 @@
 # Put your enviroment configuration here VARIABLE=value
 RL_DATA=http://192.168.52.15/LeyesReparatorias
 
+serverName='localhost'
+dbName='Prueba'
+user='sa'
+psw='Pass@word'
+
 
 EXTERNAL_PORT=8083
 INTERNAL_PORT=8080
