--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,35 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
+    env_file: src/.env
     command: ["python", "generate.py"]
     volumes:
       - ./logs:/dist/logs
 
+  
+  app:
+    build:
+      context: ./src
+      dockerfile: ../Dockerfile
+    env_file: ./src/.env
+    depends_on: 
+      - sqldata
+      
   sqldata:
     image: mcr.microsoft.com/mssql/server:2017-latest
+    container_name: BASE
+    entrypoint: /opt/mssql/bin/nonroot_msg.sh
+    env_file: ./src/.env
     environment:
       - SA_PASSWORD=Passw0rd
       - ACCEPT_EULA=Y
     ports:
       - "5434:1433"
+
+volumes: 
+    db:
+
+networks:
+  default:
+    external:
+      name: database
