--- a/src/.env.example
+++ b/src/.env.example
@@ -1,7 +1,8 @@
 # Put your enviroment configuration here VARIABLE=value
-RL_DATA=http://192.168.52.15/LeyesReparatorias
+# RL_DATA=http://192.168.52.15/LeyesReparatorias
 
-serverName='localhost'
-dbName='Prueba'
-user='sa'
-psw='Pass@word'
+SERVERNAME='localhost'
+DBNAME='database'
+USER='sa'
+PSW='Passw0rd'
+HOST='172.21.0.3'
